[project]
name = "xiaopei_comfyui"
version = "1.0.0"
description = "ComfyUI 小裴 API 扩展节点，封装 api.aicopy.top 的图片与视频接口"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Xiaopei" }]
classifiers = [
    "Framework :: ComfyUI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.31.0",
    "Pillow>=9.0.0",
    "numpy>=1.23.0",
]

[project.urls]
Homepage = "https://api.aicopy.top"

[tool.comfy]
PublisherId = "xiaopei"
DisplayName = "小裴 ComfyUI 扩展"
Icon = ""
